# RandomSakuga

./: .gitignore  Create Executable.bat  Create Win exe.bat  Pipfile  README.md  RS_config.ini  RS_settings.json  RandomSakuga.py  apis.py  argparser.py  file_version_info.txt  funcs.py  logger_config.py  options.py  process.py  pyproject.toml  random_sakuga.ini  random_sakuga.py
random_sakuga/: __init__.py  apis.py  logger_config.py  options.py  process.py
systemd/: random_sakuga@.service  random_sakuga@.timer
