[tool.poetry]
name = "random_sakuga"
version = "1.21.0.dev0"
description = "A Python bot that posts random sakuga to Facebook."
keywords = ["bot", "facebook", "sakuga", "anime"]
repository = "https://github.com/TheDL98/RandomSakuga"
homepage = "https://www.facebook.com/RandomSakuga"
authors = ["Ahmed Alkadhim <ahmed@thedl98.com>"]
license = "GPL-3.0-only"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
black = ">=23.3.0"
schedule = ">=1.2.0"
tenacity = ">=8.3.0"
jikanpy-v4 = ">=1.0.2"
platformdirs = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
random_sakuga = "random_sakuga:main"
